[WIP] Relatório de pedidos por categoria com projections